kubernetes/development/webserver/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sureback-webserver-dev
  namespace: sureback-dev-mfahmialkautsar
  labels:
    tier: backend
    layer: webserver
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: backend
      layer: webserver
  template:
    metadata:
      labels:
        tier: backend
        layer: webserver
    spec:
      containers:
        - name: webserver
          image: ghcr.io/cro2one-ilb22/sureback-web_server-dev:latest
          # imagePullPolicy: Never
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: registry-secret-dev
