kubernetes/development/webserver/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sureback-webserver-dev
  namespace: sureback-dev-mfahmialkautsar
spec:
  selector:
    tier: backend
    layer: webserver
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
