kubernetes/development/webserver/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sureback-webserver-dev
  namespace: sureback-dev-mfahmialkautsar
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  # tls:
  #   - secretName: sureback-ssl
  rules:
  - host: sureback-dev-mfahmialkautsar.cloud.okteto.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sureback-webserver-dev
            port:
              number: 80
